--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "Brussels, Belgium"
 site_theme               : "default"
-title                    : "Saad Rekiek/ Portfolio"
+title                    : "Portfolio"
 title_separator          : "-"
 name                     : &name "Saad Rekiek"
 description              : &description "personal description"
-url                      : https://saad-rekiek.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://saadrek.github.io/saad-rekiek.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Saad Rekiek"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : ""
+  location         : "Brussels, Belgium"
+  employer         : "Université Libre de Bruxelles"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "saad.rekiek@outlook.com" 
 
   # Academic websites
   academia         : # URL
